spacing and placement of info fixed

--- a/tennis-website/src/pages/AboutPage/AboutPage.css
+++ b/tennis-website/src/pages/AboutPage/AboutPage.css
@@ -15,8 +15,8 @@
     margin-top: 50px;
     margin-bottom: 50px;
     margin-right: 0;
-    margin-left: 100px;
-    width: 100%;
+    margin-left: auto;
+    width: 70%;
     background-color: var(--uva-dark-blue);
 }
 
@@ -27,9 +27,9 @@
     justify-content: center;
     margin-top: 50px;
     margin-bottom: 50px;
-    margin-right: 100px;
+    margin-right: auto;
     margin-left: 0;
-    width: 100%;
+    width: 70%;
     background-color: var(--uva-dark-blue);
 }
 
@@ -44,6 +44,8 @@
 }
 
 .right-image {
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-right: 20px;
     margin-left: auto;
 }
